tests/neg-custom-args/captures/unbox.scala
type Proc = {*} () => Unit

val xs: List[Proc] = ???

val x = xs.head // error
